# ApuestasSeguras

./: .gitignore  .replit  README.md  amazon.py  app.yaml  apuestas.py  bet365.py  bet3652.py  bet3653.py  bwin.py  comandos_gcloud.txt  enlaces.txt  main.py  my_requirements.txt  notas.txt  pretty_print.txt  pyproject.toml  readme.txt  requirements.txt  response.txt  respuesta.txt  respuesta_ob.pickle  run_leovegas.py  soup.pickle  t.txt  telegram_bot.py  web.py  williamhill (copia).py
API/: tenis.json  web.py
API/htmls/: betfair.html  betstars.html  bwin.html  williamhill.html
TODO_bet365/herramientas_scraping/: info.txt
TODO_bet365/nuevo_intento1/: bet365.py  cookies.json  notas.txt  p1.py  p2.py  p3.py  r1.txt
TODO_leovegas/: TODOs  intento1.py  respuesta.json
herramientas_scraping/: downloaded_proxies.json  get_proxies.py  headers.py  herramientas_headers.py  herramientas_proxies.py  mis_funciones.py  proxies.json  proxies2.json  proxies_esp.json  proxyscan.json  proxyscan.py  scraperapi.py
nuevos/: apuestas2.py  betfair.json  betfair2.py  betstars.json  betstars2.py  bwin.json  bwin2.py  codigo.txt  data_classes.py  notas.txt  pretty_print.txt  williamhill.json  williamhill2.py
nuevos2/: apuestas2.py  betfair.json  betfair2.py  betstars.json  betstars2.py  bwin.json  bwin2.py  data_classes.py  pretty_print.txt  williamhill.json  williamhill2.py
scripts/: __init__.py  apuestas.py  betfair.py  betstars.py  bwin.py  data_classes.py  leovegas.py  logger.py  notas.txt  williamhill.py
viejos/: apuestas.py  betfair.py  betstars.py  bwin.py  williamhill.py
(+24 files in other folders)
