[tool.poetry]
name = "apuestasseguras"
version = "0.1.0"
description = ""
authors = ["aurelm95@gmail.com"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3.5"
beautifulsoup4 = "^4.10.0"
api-nichotined = "^1.1.1"
APScheduler = "^3.8.1"
Flask = "^2.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
