[tool.poetry]
name = "repl_python3_ApuestasSeguras"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3.5"
APScheduler = "^3.8.1"
Flask = "^2.0.2"
api-nichotined = "^1.1.1"
bs4 = "^0.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
